-*- change-log -*-

0.04	2011-12-12 rurban
	* use run-time not begin-time %INC on -r or -e for files and lines.
	* fixed empty END runops loops caused by format

0.03	2011-12-12 rurban
	* forgot to add c_minus and lib/B/Stats/Minus.pm to MANIFEST

0.02	2011-12-09 rurban
	* added generated B::Stats::Minus to substract our own overhead
	* implemented switch bundling
	* added t/exact.t to test B::Stats::Minus

0.01	2011-12-06 rurban
	* First release as B-Stats-0.01