@@ -1,5 +1,0 @@
-package B::Stats::Minus;
-
-# empty placeholder. will be overwritten by c_minus
-
-1
